objects/Member__c.object
<CustomObject>
    <fields>
        <fullName>ExpiryDate__c</fullName>
        <label>ExpiryDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LineofBusiness__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LineofBusiness</label>
        <referenceTo>LineofBusiness__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MemberID__c</fullName>
        <label>MemberID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Member</label>
    <nameField>
        <label>Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>